dev v-1.0.1 | cliente | bogho

--- a/src/App.css
+++ b/src/App.css
@@ -62,20 +62,19 @@ html {
 
 /* Custom Scrollbar */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 0;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: none;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #667eea;
-  border-radius: 4px;
+  background: none
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #5a67d8;
+  background: none;
 }
 
 /* Focus Styles */
