--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,28 +1,48 @@
 /* Footer Styles */
-.footer {
-  background: #13839c;
-  color: white;
-  padding: 3rem 0 1rem;
-  margin-top: 4rem;
-}
 
-.footer .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 2rem;
+
+.footer {
+  background:  #ffffff;
+  margin-top: 1rem;
+
 }
 
 .footer-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 2rem;
-  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items:start;
+  gap: 3rem;
+  width: 100%;
+  padding: 1.5rem;
+
+}
+
+.footer-section {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  text-align: start;
+  margin-top: 1rem;
+}
+
+.footer-section-logo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 1rem;
+  width: 40%;
+  text-align: center;
 }
 
 .footer-section h3 {
   color: #f3703c;
   margin-bottom: 1rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
 }
@@ -46,9 +66,10 @@
 .footer-description {
   line-height: 1.6;
   margin-bottom: 1.5rem;
-  color: #bdc3c7;
+  color: #13839c;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  font-size: 0.9rem;
 }
 
 .social-links {
@@ -57,7 +78,7 @@
 }
 
 .social-links a {
-  color: white;
+  color: #13839c;
   font-size: 1.5rem;
   transition: color 0.3s ease;
 }
@@ -77,11 +98,12 @@
 }
 
 .footer-links a {
-  color: #bdc3c7;
+  color: #13839c;
   text-decoration: none;
   transition: color 0.3s ease;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  font-size: 0.8rem;
 }
 
 .footer-links a:hover {
@@ -91,6 +113,8 @@
 .contact-info {
   display: flex;
   flex-direction: column;
+  align-items: start;
+  justify-content: start;
   gap: 1rem;
 }
 
@@ -98,6 +122,10 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  color: #13839c;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 0.8rem;
 }
 
 .contact-icon {
@@ -109,9 +137,10 @@
   text-align: center;
   padding-top: 2rem;
   border-top: 1px solid rgba(243, 112, 60, 0.3);
-  color: #bdc3c7;
+  color: #13839c;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+    font-size: 0.8rem;
 }
 
 /* Mobile Responsive */
